php dosyalarına verilen bağlar html dosyalarına verildi.

--- a/temel/header.html
+++ b/temel/header.html
@@ -4,14 +4,14 @@
       <li><a href="/deveb/" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel kap merkez">
-      <li><a href="/deveb/belgeler/kap-orgusu.php">Kap Örgüsü</a></li>
-      <li><a href="/deveb/belgeler/kap-orgusu/olcekler.php">Kap Ölçekleri</a></li>
-      <!--<li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Kap Örnekleri</a></li>-->
-      <li><a href="/deveb/belgeler/sekme-orgusu.php">Sekme</a></li>
-      <li><a href="/deveb/belgeler/resim-orgusu.php">Resim</a></li>
-      <li><a href="/deveb/belgeler/renk-orgusu.php">Renk</a></li>
-      <li><a href="/deveb/belgeler/takim.php">Takım</a></li>
-      <li><a href="/deveb/belgeler/tarayici-destegi.php">Tarayıcı Desteği</a></li>
+      <li><a href="/deveb/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
+      <li><a href="/deveb/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
+      <!--<li><a href="/deveb/belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
+      <li><a href="/deveb/belgeler/sekme-orgusu.html">Sekme</a></li>
+      <li><a href="/deveb/belgeler/resim-orgusu.html">Resim</a></li>
+      <li><a href="/deveb/belgeler/renk-orgusu.html">Renk</a></li>
+      <li><a href="/deveb/belgeler/takim.html">Takım</a></li>
+      <li><a href="/deveb/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
   </div>
 </div>
