--- a/temel/header.html
+++ b/temel/header.html
@@ -1,17 +1,17 @@
 <div id="header" class="kap ortala merkez ap-beyaz beri-alt-1 kenar-alt" data-gnl="24p 24" style="min-height:60px;">
   <div class="kap ger" data-gnl="23">
     <ul class="menü-genel kap merkez">
-      <li><a href="/deveb/" class="logo">deveb</a></li>
+      <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel kap merkez">
-      <li><a href="/deveb/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
-      <li><a href="/deveb/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
-      <!--<li><a href="/deveb/belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
-      <li><a href="/deveb/belgeler/sekme-orgusu.html">Sekme</a></li>
-      <li><a href="/deveb/belgeler/resim-orgusu.html">Resim</a></li>
-      <li><a href="/deveb/belgeler/renk-orgusu.html">Renk</a></li>
-      <li><a href="/deveb/belgeler/takim.html">Takım</a></li>
-      <li><a href="/deveb/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
+      <li><a href="/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
+      <li><a href="/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
+      <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
+      <li><a href="/belgeler/sekme-orgusu.html">Sekme</a></li>
+      <li><a href="/belgeler/resim-orgusu.html">Resim</a></li>
+      <li><a href="/belgeler/renk-orgusu.html">Renk</a></li>
+      <li><a href="/belgeler/takim.html">Takım</a></li>
+      <li><a href="/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
     </ul>
   </div>
 </div>
