--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head w3-include-html="/temel/head.html"></head>
+<head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
 <body data-metin="ana">
-  <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
+  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
 <div class="kaplama ortala" data-gnl="24p">
   <div data-gnl="23 24p">
@@ -107,7 +107,7 @@
   </div>
 </div>
 
-  <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
+  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
 </body>
