--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -12,12 +12,12 @@
       <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
     </div>
 
-    <div class="kap sarkıtlat" data-gnl="24">
+    <div class="sarkıtlat" data-gnl="24">
       <div data-gnl="24">
         <h2>Masaüstü Desteği</h2>
         Destekler güncel sürümlere göre belirtilmiştir.
       </div>
-      <div class="kap" data-gnl="24">
+      <div data-gnl="24">
         <div data-gnl="1 6p" data-ufk="6 6p">
           <div data-gnl="6" data-ufk="3">
             <div class="kutu kutu-genel">
@@ -30,7 +30,7 @@
             </div>
           </div>
         </div>
-        <div class="kap" data-gnl="1 6p" data-ufk="6 6p">
+        <div data-gnl="1 6p" data-ufk="6 6p">
           <div data-gnl="6" data-ufk="3">
           <div class="kutu kutu-genel">
             <i class="fa fa-firefox" aria-hidden="true"></i> Firefox
@@ -66,7 +66,7 @@
           </div>
           </div>
         </div>
-        <div class="kap" data-gnl="1 6p" data-ufk="6 6p">
+        <div data-gnl="1 6p" data-ufk="6 6p">
           <div data-gnl="6" data-ufk="3">
             <div class="kutu kutu-genel">
               <i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
@@ -84,7 +84,7 @@
             </div>
           </div>
         </div>
-        <div class="kap" data-gnl="1 6p" data-ufk="6 6p">
+        <div data-gnl="1 6p" data-ufk="6 6p">
           <div data-gnl="6" data-ufk="3">
             <div class="kutu kutu-genel">
               <i class="fa fa-edge" aria-hidden="true"></i> Edge
