--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
 <head w3-include-html="/temel/head.html"></head>
 <body data-metin="ana">
   <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
-  Düzeltildi.
+  <div class="ortala" data-gnl="8 8p" data-ort="8p">
+      <div class="ortala" data-gnl="8" data-ort="4">
+        <div class="dolgu-2" style="overflow:hidden;" data-gnl="1 1p">
+          <h1 class="metin-deveb  beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
+          <p class="metin-gri-3 beri-2">
+            Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır.
+  Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
+          </p>
+          <p class="metin-gri-3 beri-2 ortala" data-gnl="1 1p"><a href="/deveb/belgeler/kap-orgusu.php" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">BAŞLA</a><a href="" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px; margin-left:15px;">GÖM</a></p>
+        </div>
+      </div>
+      <div class="merkez direk" data-gnl="8" data-ort="4">
+        <div class="ortala" data-gnl="6">
+          <div data-gnl="8" style="padding-left:2%">
+
+            <div class="beri-alt-1" data-gnl="8" style="background-color:#ccc; height:200px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="8" style="height:60px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="1 5p" style="height:80px;"></div>
+
+            <div data-gnl="4 5p">
+              <div class="beri-sol-1 beri-alt-1" data-gnl="5" style="background-color:#ccc;"></div>
+            </div>
+
+            <div class="ap-deveb" data-gnl="8" style="height:60px;"></div>
+
+          </div>
+        </div>
+        <div data-gnl="2">
+          <div class="beri-sol-2 ap-deveb" data-gnl="6"></div>
+        </div>
+      </div>
+  </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script>w3.includeHTML();</script>
 </body>
