--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
-<head w3-include-html="/temel/head.html"></head>
+<head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
 <body data-metin="ana">
   <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
   <div class="ortala" data-gnl="8 8p" data-ort="8p">
