dil türkçe tanımlaması.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
 <body data-metin="ana">
