--- a/temel/head.html
+++ b/temel/head.html
@@ -7,10 +7,10 @@
 <!-- Kök -->
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-<link href="assets/css/deveb.ilkel.s3.css" rel="stylesheet">
-<link href="assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
-<link href="assets/css/deveb.genel.css" rel="stylesheet">
+<link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
+<link href="https://data-deveb.github.io/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
+<link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
+<link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
