--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
-<body data-metin="ana">
+<body>
   <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
 <div class="kaplama ortala" data-gnl="24p">
