sekme örgüsü düzeltildi.

--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -224,5 +224,8 @@
   </div>
 </div>
 
-
-<?php include '../toprak/foot.html';?>
+<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>w3.includeHTML();</script>
+</body>
+</html>
