php dosyaları html dosyalara dönüştürüldü.

--- a/belgeler/kap-olcekleri/6p.html
+++ b/belgeler/kap-olcekleri/6p.html
@@ -1,8 +1,11 @@
-<?php include '../../toprak/head.html';?>
-<?php include '../../toprak/header.html';?>
+<!DOCTYPE html>
+<html>
+<head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
+<body>
+<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
 <div class="kap ortala" data-gnl="24p">
-  <div class="kap" data-gnl="23 24p" >
+  <div data-gnl="23 24p" >
     <div data-gnl="24">
       <h1>Kap Ölçekleri: 6p</h1>
       <p class="beri-alt-2">Uyumluluk özelliği nedeniyle gnl, byk, ort, kçk, ufk ekran ölçekleriyle birlikte kullanılır.</p>
@@ -35,4 +38,8 @@
   </div>
 </div>
 
-<?php include '../../toprak/foot.html';?>
+<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>w3.includeHTML();</script>
+</body>
+</html>
