--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -107,8 +107,8 @@
   </div>
 </div>
 
-  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
-  <script src="https://www.w3schools.com/lib/w3.js"></script>
-  <script>w3.includeHTML();</script>
+<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
+<script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
+<script>w3.includeHTML();</script>
 </body>
 </html>
