--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -4,108 +4,57 @@
 <body>
   <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div class="kaplama ortala" data-gnl="24p">
-  <div data-gnl="23 24p">
-    <div data-gnl="24">
-      <h1>Tarayıcı Desteği</h1>
-      <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
-    </div>
+  <div class="ortala" gnl="24p">
+    <div class="kaplama" gnl="23">
+      <h1>Takımlar</h1>
+      <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
 
-    <div class="sarkıtlat" data-gnl="24">
-      <div data-gnl="24">
-        <h2>Masaüstü Desteği</h2>
-        Destekler güncel sürümlere göre belirtilmiştir.
+    <div class="arala-1 dışkenar-0 metin-orta" gnl="1 1p" ufk="2 2p" ort="3 3p">
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Örgü Takımı</span> <br>
+          Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
+        </p>
       </div>
-      <div data-gnl="24">
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-chrome" aria-hidden="true"></i> Chrome
-            </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel metin-olumlu">
-              <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-            </div>
-          </div>
-        </div>
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-firefox" aria-hidden="true"></i> Firefox
-          </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel metin-olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-opera" aria-hidden="true"></i> Opera
-          </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel metin-olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel">
-            <i class="fa fa-safari" aria-hidden="true"></i> Safari
-          </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-          <div class="kutu kutu-genel metin-olumlu">
-            <i class="fa fa-check" aria-hidden="true"></i> Sorunsuz
-          </div>
-          </div>
-        </div>
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-internet-explorer" aria-hidden="true"></i> IE 10+
-            </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel metin-belirsiz">
-              <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-            </div>
-            <div class="kutu kutu-genel metin-olumsuz">
-              <ul class="liste-temiz">
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk</li>
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div data-gnl="1 6p" data-ufk="6 6p">
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel">
-              <i class="fa fa-edge" aria-hidden="true"></i> Edge
-            </div>
-          </div>
-          <div data-gnl="6" data-ufk="3">
-            <div class="kutu kutu-genel metin-belirsiz">
-              <i class="fa fa-times" aria-hidden="true"></i> Belirsiz
-            </div>
-            <div class="kutu kutu-genel metin-olumsuz">
-              <ul class="liste-temiz">
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> CSS özelliklerinde uyumsuzluk </li>
-                <li><i class="fa fa-question-circle-o" aria-hidden="true"></i> IE 10+ ek CSS ile güçlendirildi.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Örnek Takımı</span> <br>
+          Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
+        </p>
+      </div>
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Başarım Takımı</span> <br>
+          Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
+        </p>
+      </div>
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Görüş Takımı</span> <br>
+          Deveb hakkında izlenimlerini, fikirlerini, beklentilerini ortaya koymak için bir araya gelirler
+        </p>
+      </div>
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Belge Takımı</span> <br>
+          Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
+        </p>
+      </div>
+      <div gnl="1" ufk="1" ort="1">
+        <p>
+          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
+          <span class="metin-olumlu">Yardım Takımı</span> <br>
+          Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
+        </p>
       </div>
     </div>
-
+      </div>
   </div>
-</div>
 
 <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/foot.html"></div>
 <script src="https://data-deveb.github.io/assets/js/not-for-deveb-w3.js"></script>
