index'e yanlış şey kopyalamışım düzelttim.

--- a/index.html
+++ b/index.html
@@ -4,55 +4,36 @@
 <head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
 <body>
   <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
-  <div class="ortala" gnl="24p">
-    <div class="kaplama" gnl="23">
-      <h1>Takımlar</h1>
-      <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
+  <div class="ortala" data-gnl="8 8p" data-ort="8p">
+      <div class="ortala" data-gnl="8" data-ort="4">
+        <div class="dolgu-2" style="overflow:hidden;" data-gnl="1 1p">
+          <h1 class="metin-deveb  beri-2" style="font-size:80pt; font-family: 'Comfortaa', cursive; color:#2c2171 !important; align-items:center; justify-content:center; display:flex;">deveb</h1>
+          <p class="metin-gri-3 beri-2">
+            Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır.
+  Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
+          </p>
+          <p class="metin-gri-3 beri-2 ortala" data-gnl="1 1p"><a href="/deveb/belgeler/kap-orgusu.php" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">BAŞLA</a><a href="" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px; margin-left:15px;">GÖM</a></p>
+        </div>
+      </div>
+      <div class="merkez direk" data-gnl="8" data-ort="4">
+        <div class="ortala" data-gnl="6">
+          <div data-gnl="8" style="padding-left:2%">
 
-    <div class="arala-1 dışkenar-0 metin-orta" gnl="1 1p" ufk="2 2p" ort="3 3p">
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Örgü Takımı</span> <br>
-          Deveb iskeletini geliştirmek üzere bir araya gelerek tüm grupları etkileyen işler yaparlar
-        </p>
-      </div>
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Örnek Takımı</span> <br>
-          Deveb kullanarak yapılabilecek her şeye basit bir örnek çıkarmak için bir araya gelirler
-        </p>
-      </div>
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Başarım Takımı</span> <br>
-          Deveb kullanımı sırasında yolunda gitmeyen şeyleri çözmek için bir araya gelirler
-        </p>
-      </div>
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-microchip beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Görüş Takımı</span> <br>
-          Deveb hakkında izlenimlerini, fikirlerini, beklentilerini ortaya koymak için bir araya gelirler
-        </p>
-      </div>
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-briefcase beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Belge Takımı</span> <br>
-          Deveb hakkında gerek duyulacak her türlü belgeyi oluşturmak için bir araya gelirler
-        </p>
-      </div>
-      <div gnl="1" ufk="1" ort="1">
-        <p>
-          <i class="fa fa-star beri-2" style="font-size:60pt;"></i> <br>
-          <span class="metin-olumlu">Yardım Takımı</span> <br>
-          Deveb kullanımı konusunda yardıma ihtiyaç duyulan herhangi bir noktada çözüm için bir araya gelirler
-        </p>
-      </div>
-    </div>
+            <div class="beri-alt-1" data-gnl="8" style="background-color:#ccc; height:200px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="8" style="height:60px;"></div>
+            <div class="ap-deveb beri-alt-1" data-gnl="1 5p" style="height:80px;"></div>
+
+            <div data-gnl="4 5p">
+              <div class="beri-sol-1 beri-alt-1" data-gnl="5" style="background-color:#ccc;"></div>
+            </div>
+
+            <div class="ap-deveb" data-gnl="8" style="height:60px;"></div>
+
+          </div>
+        </div>
+        <div data-gnl="2">
+          <div class="beri-sol-2 ap-deveb" data-gnl="6"></div>
+        </div>
       </div>
   </div>
   <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
