--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head w3-include-html="https://data-deveb.github.io/temel/head.html"></head>
+<script type="text/javascript">
+$(window).load(function() {
+  //code
+});
+</script>
 <body>
   <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
