--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 <body>
-  <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
+  <div data-gnl="1 1p" class="header" w3-include-html="/temel/header.html"></div>
   <div class="ortala" data-gnl="8 8p" data-ort="8p">
       <div class="ortala" data-gnl="8" data-ort="4">
         <div class="dolgu-2" style="overflow:hidden;" data-gnl="1 1p">
