--- a/belgeler/kap-olcekleri/4p.html
+++ b/belgeler/kap-olcekleri/4p.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 <body>
-<div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+<div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
 <div class="kap ortala" data-gnl="24p">
   <div data-gnl="23 24p">
