--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 <body>
-  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+  <div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
   <div class="ortala" gnl="24p">
     <div class="kaplama" gnl="23">
