--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -24,7 +24,7 @@
   <![endif]-->
 </head>
 <body>
-  <div data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
+  <div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
 <div class="kaplama ortala" data-gnl="24p">
   <div data-gnl="23 24p">
