--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             Ağ sayfalarında kullanılması için Türkçe olarak geliştirilen bir önyüz iskeletidir. İngilizce'de frontend framework diye anılmaktadır.
   Kap örgüsünün sahip olduğu özellikleri bir kere kullandıktan sonra ne kadar yeterli olduğunu görmenizle birlikte belki de uzun süreler kullanacaksınız.
           </p>
-          <p class="metin-gri-3 beri-2 ortala" data-gnl="1 1p"><a href="/deveb/belgeler/kap-orgusu.html" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">BAŞLA</a><a href="https://www.facebook.com/groups/1818283228485179/" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px; margin-left:15px;">CANLI ÇALIŞMALARA KATIL</a></p>
+          <p class="metin-gri-3 beri-2 ortala" data-gnl="1 1p">
+            <a href="/deveb/belgeler/kap-orgusu.html" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">BAŞLA</a>
+            <a href="https://www.facebook.com/groups/1818283228485179/" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px; margin-left:15px;">CANLI ÇALIŞMALARA KATIL</a>
+          </p>
         </div>
       </div>
       <div class="merkez direk" data-gnl="8" data-ort="4">
