--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -62,6 +62,51 @@
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
     <b>Kullanım tipi:</b><br>( data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800" )<br> ( class="metin-birincil metin-300 metin-soluk data-arka-ikincil data-arka-600 data-arka-parlak kenar-tam-siyah kenar-800" )<br><br></p>
   </div>
+  <div class="" data-gnl="4p">
+    <div class="4">
+      <h1>Renk Tablosu Örneği</h1>
+    </div>
+    <div data-gnl="1" data-arka="ana">data-arka="ana"</div>
+    <div data-gnl="1" data-arka="ara">data-arka="ara"</div>
+    <div data-gnl="1" data-arka="birincil">data-arka="birincil"</div>
+    <div data-gnl="1" data-arka="ikincil">data-arka="ikincil"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 100"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 100"</div>
+    <div data-gnl="1" data-arka="birincil 200">data-arka="birincil 100"</div>
+    <div data-gnl="1" data-arka="ikincil 200">data-arka="ikincil 100"</div>
+    <div data-gnl="1" data-arka="ana 200">data-arka="ana 200"</div>
+    <div data-gnl="1" data-arka="ara 200">data-arka="ara 200"</div>
+    <div data-gnl="1" data-arka="birincil 200">data-arka="birincil 200"</div>
+    <div data-gnl="1" data-arka="ikincil 200">data-arka="ikincil 200"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 300"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 300"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 300"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 300"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 400"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 400"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 400"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 400"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 500"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 500"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 500"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 500"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 600"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 600"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 600"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 600"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 700"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 700"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 700"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 700"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 800"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 800"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 800"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 800"</div>
+    <div data-gnl="1" data-arka="ana 100">data-arka="ana 900"</div>
+    <div data-gnl="1" data-arka="ara 100">data-arka="ara 900"</div>
+    <div data-gnl="1" data-arka="birincil 100">data-arka="birincil 900"</div>
+    <div data-gnl="1" data-arka="ikincil 100">data-arka="ikincil 900"</div>
+  </div>
   <div data-gnl="3">
     <h2>Örnek</h2>
   </div>
