data-gnl yazmamışım. :D

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -63,7 +63,7 @@
     <b>Kullanım tipi:</b><br>( data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800" )<br> ( class="metin-birincil metin-300 metin-soluk data-arka-ikincil data-arka-600 data-arka-parlak kenar-tam-siyah kenar-800" )<br><br></p>
   </div>
   <div class="" data-gnl="4p">
-    <div class="4">
+    <div data-gnl="4">
       <h1>Renk Tablosu Örneği</h1>
     </div>
     <div data-gnl="1" data-arka="ana">data-arka="ana"</div>
