Renk tablosu örneği genişletildi.

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -106,6 +106,22 @@
     <div data-gnl="1" data-arka="ara 900">data-arka="ara 900"</div>
     <div data-gnl="1" data-arka="birincil 900">data-arka="birincil 900"</div>
     <div data-gnl="1" data-arka="ikincil 900">data-arka="ikincil 900"</div>
+    <div data-gnl="1" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
+    <div data-gnl="1" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
+    <div data-gnl="1" data-arka="birincil en-soluk">data-arka="birincil çok-soluk"</div>
+    <div data-gnl="1" data-arka="ikincil en-soluk">data-arka="ikincil çok-soluk"</div>
+    <div data-gnl="1" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
+    <div data-gnl="1" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
+    <div data-gnl="1" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
+    <div data-gnl="1" data-arka="ikincil çok-soluk">data-arka="ikincil çok-soluk"</div>
+    <div data-gnl="1" data-arka="ana soluk">data-arka="ana soluk"</div>
+    <div data-gnl="1" data-arka="ara soluk">data-arka="ara soluk"</div>
+    <div data-gnl="1" data-arka="birincil soluk">data-arka="birincil soluk"</div>
+    <div data-gnl="1" data-arka="ikincil soluk">data-arka="ikincil soluk"</div>
+    <div data-gnl="1" data-arka="ana az-soluk">data-arka="ana az-soluk"</div>
+    <div data-gnl="1" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
+    <div data-gnl="1" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
+    <div data-gnl="1" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
   </div>
   <div data-gnl="3">
     <h2>Örnek</h2>
