--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -47,7 +47,7 @@
   </div>
   <div class="beri-üst-1 beri-alt-1" data-gnl="24">
     <h3>Bölme Yöntemi</h3>
-    <p>Bir genişliği eşit ölçülerde bölmek istiyorsak bölme yöntemini kullanırız. Bu yöntemi kullanmak çok basittir. Temel mantığımız ana etikete bölmek istediğimiz kadar değeri örnek:"2p" şeklinde ekran ölçeklerine yazarız. Yavru etikete ise "1" değerini yazarız. Bundan sonra "1" değerini ekran ölçeklerine yazarak oluşturduğunuz etiket başta belirtiğiniz değere göre eşit olarak bölünecektir. Aşağıdaki örnekte 5 bölmeden oluşan bir kap yapısı oluşturuldu. Bunun için kap örgüsünde şu sınıf yazılır; <span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">5 5p</span><span class="metin-olumlu">"</span><br><br> Yavru sınıflarda <span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">1</span><span class="metin-olumlu">"</span> doğru şekilde tanımlandıysa bu sınıfın olduğu etiket ana etikette belirtilen bölme değerine göre genişlik değeri alacaktır. Örnekte görüldüğü gibi.</p>
+    <p>Bir genişliği eşit ölçülerde bölmek istiyorsak bölme yöntemini kullanırız. Bu yöntemi kullanmak çok basittir. Temel mantığımız ana etikete bölmek istediğimiz kadar değeri örnek:"2p" şeklinde ekran ölçeklerine yazarız. Yavru etikete ise "1" değerini yazarız. Bundan sonra "1" değerini ekran ölçeklerine yazarak oluşturduğunuz etiket başta belirtiğiniz değere göre eşit olarak bölünecektir. Aşağıdaki örnekte 5 bölmeden oluşan bir kap yapısı oluşturuldu. Bunun için kap örgüsünde şu sınıf yazılır; <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">5 5p</span><span class="metin-olumlu">"</span><br><br> Yavru sınıflarda <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">1</span><span class="metin-olumlu">"</span> doğru şekilde tanımlandıysa bu sınıfın olduğu etiket ana etikette belirtilen bölme değerine göre genişlik değeri alacaktır. Örnekte görüldüğü gibi.</p>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/dshjqLjn/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
@@ -56,13 +56,13 @@
     <h3>Parça Yöntemi</h3>
     <p>Bulunduğu genişliği parçalara ayırarak kullanma yöntemidir. 24 farklı parça aralığı varsayılan olarak ayarlanmıştır. 1p, 2p, 3p, 4p, 5p, 6p, 8p, 7p, 8p, 9p, 10p, 11p, 12p, 13p, 14p, 15p, 16p, 17p, 18p, 19p, 20p, 21p, 22p, 23p, 24p olarak istediğiniz ekran ölçeğinde (gnl, byk, ort, ufk) kullanabilirsiniz. Örneğin 10p parça aralığını kullanacaksanız genişliği 10 eşit parçaların toplamına kadar kullanmak istediğinizi anlarız. Bununla birlikte farklı parça aralıklarını bir arada kullanabilme özelliği vardır. Buradan anlamanızı beklediğimiz, HTML dosyasının bir bölümünde 10p kullanıyorken, diğer bir bölümünde 16p kullanabilirsiniz.</p>
     <h4 class="beri-alt-1 beri-üst-1">Kullanımı</h4>
-    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-gnl="" ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
+    <p>Kap örgüsü ile ilgili bir işlem yapacağınız zaman data-gnl="" ekran tipinde ölçek her zaman belirtilmelidir. Bir genişliği tüm ekran ölçeklerinde 24 parçaya ayırarak kullanmak için sınıfı şöyle yazmalısınız;<span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24 24p</span><span class="metin-olumlu">"</span>. Böyle yazdığınız zaman bulunduğu genişliği baştan sonra kadar kaplayacaktır. Eğer 24 parçanın yarısı kadar kaplamak istiyorsanız; <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">12 24p</span><span class="metin-olumlu">"</span> veya <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">24p 12</span><span class="metin-olumlu">"</span> şeklinde yazmanız gerekmektedir. Buradan yola çıkarak diğer parça aralıklarını kullanabilirsiniz.</p>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/2wa4s4jf/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
   <div class="beri-üst-1 beri-alt-1" data-gnl="24">
     <h3>Oran Yöntemi</h3>
-    <p>Bir genişlikte birbirlerinin katları olacak şekilde oranlar kurabilirsiniz. Örneğin 1 3 1 oranında bir düzen yazabilirsiniz. Oran yöntemini <span class="metin-olumlu">gnl="</span><span class="metin-belirsiz">1o</span><span class="metin-olumlu">"</span> şeklinde yazarak kullanabilirsiniz</p>
+    <p>Bir genişlikte birbirlerinin katları olacak şekilde oranlar kurabilirsiniz. Örneğin 1 3 1 oranında bir düzen yazabilirsiniz. Oran yöntemini <span class="metin-olumlu">data-gnl="</span><span class="metin-belirsiz">1o</span><span class="metin-olumlu">"</span> şeklinde yazarak kullanabilirsiniz</p>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     <iframe data-gnl="1 2p" height="300" src="//jsfiddle.net/deveb/hsr989pz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
   </div>
@@ -92,10 +92,10 @@ Her bir ismin kısaltılmış yazılışları vardır.</p>
     </tr>
     <tr>
       <th>Sınıf önekleri</th>
-      <td>gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
-      <td>ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
-      <td>ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
-      <td>byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
+      <td>data-gnl<br><span class="metin-olumlu">telefon ve daha büyük</span> </td>
+      <td>data-ufk<br><span class="metin-olumlu">tablet ve daha büyük</span></td>
+      <td>data-ort<br><span class="metin-olumlu">dizüstü ve daha büyük</span></td>
+      <td>data-byk<br><span class="metin-olumlu">büyük ekranlar</span></td>
     </tr>
     <tr>
       <th>Oran Ölçekleri</th>
