--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -108,8 +108,8 @@
     <div data-gnl="1" data-arka="ikincil 900">data-arka="ikincil 900"</div>
     <div data-gnl="1" data-arka="ana en-soluk">data-arka="ana en-soluk"</div>
     <div data-gnl="1" data-arka="ara en-soluk">data-arka="ara en-soluk"</div>
-    <div data-gnl="1" data-arka="birincil en-soluk">data-arka="birincil çok-soluk"</div>
-    <div data-gnl="1" data-arka="ikincil en-soluk">data-arka="ikincil çok-soluk"</div>
+    <div data-gnl="1" data-arka="birincil en-soluk">data-arka="birincil en-soluk"</div>
+    <div data-gnl="1" data-arka="ikincil en-soluk">data-arka="ikincil en-soluk"</div>
     <div data-gnl="1" data-arka="ana çok-soluk">data-arka="ana çok-soluk"</div>
     <div data-gnl="1" data-arka="ara çok-soluk">data-arka="ara çok-soluk"</div>
     <div data-gnl="1" data-arka="birincil çok-soluk">data-arka="birincil çok-soluk"</div>
