Renk tablosu örneği genişletildi.

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -122,6 +122,27 @@
     <div data-gnl="1" data-arka="ara az-soluk">data-arka="ara az-soluk"</div>
     <div data-gnl="1" data-arka="birincil az-soluk">data-arka="birincil az-soluk"</div>
     <div data-gnl="1" data-arka="ikincil az-soluk">data-arka="ikincil az-soluk"</div>
+    <div data-gnl="1" data-arka="ana normal">data-arka="ana normal"</div>
+    <div data-gnl="1" data-arka="ara normal">data-arka="ara normal"</div>
+    <div data-gnl="1" data-arka="birincil normal">data-arka="birincil normal"</div>
+    <div data-gnl="1" data-arka="ikincil normal">data-arka="ikincil normal"</div>
+    <div data-gnl="1" data-arka="ana az-parlak">data-arka="ana az-parlak"</div>
+    <div data-gnl="1" data-arka="ara az-parlak">data-arka="ara az-parlak"</div>
+    <div data-gnl="1" data-arka="birincil az-parlak">data-arka="birincil az-parlak"</div>
+    <div data-gnl="1" data-arka="ikincil az-parlak">data-arka="ikincil az-parlak"</div>
+    <div data-gnl="1" data-arka="ana parlak">data-arka="ana parlak"</div>
+    <div data-gnl="1" data-arka="ara parlak">data-arka="ara parlak"</div>
+    <div data-gnl="1" data-arka="birincil parlak">data-arka="birincil parlak"</div>
+    <div data-gnl="1" data-arka="ikincil parlak">data-arka="ikincil parlak"</div>
+    <div data-gnl="1" data-arka="ana çok-parlak">data-arka="ana çok-parlak"</div>
+    <div data-gnl="1" data-arka="ara çok-parlak">data-arka="ara çok-parlak"</div>
+    <div data-gnl="1" data-arka="birincil çok-parlak">data-arka="birincil çok-parlak"</div>
+    <div data-gnl="1" data-arka="ikincil çok-parlak">data-arka="ikincil çok-parlak"</div>
+    <div data-gnl="1" data-arka="ana en-parlak">data-arka="ana en-parlak"</div>
+    <div data-gnl="1" data-arka="ara en-parlak">data-arka="ara en-parlak"</div>
+    <div data-gnl="1" data-arka="birincil en-parlak">data-arka="birincil en-parlak"</div>
+    <div data-gnl="1" data-arka="ikincil en-parlak">data-arka="ikincil en-parlak"</div>
+
   </div>
   <div data-gnl="3">
     <h2>Örnek</h2>
