--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -56,12 +56,12 @@
       <span data-arka="siyah" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0;margin-right:3px;"></span>siyah -
       <span data-arka="gri" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:0;margin-right:3px;"></span>gri -
       <span data-arka="beyaz" style="display:inline-block; height:10px; width:10px; border-radius:50%; border-width:1px; border-style:solid;margin-right:3px;"></span>beyaz<br>
-    <b>Kullanım tipi:</b><br>( data-metin="birincil" data-arka="ikincil" data-kenar="tam siyah" )<br> ( class="metin-birincil data-arka-ikincil kenar-tam-siyah" )<br><br></p>
+    <b>Kullanım tipi:</b><br>data-metin="birincil" data-arka="ikincil" data-kenar="tam siyah"<br><br><br></p>
   </div>
   <div data-gnl="24" data-ufk="8" style="font-size:13px;">
     <p><b>Renk Tonları:</b><br>100 - 200 - 300 - 400 - 500 - 600 - 700 - 800 - 900<br>
       <b>Renk Aydınlığı:</b><br>en-soluk -  çok-soluk - soluk - az-soluk - normal - az-parlak - parlak - çok-parlak - en-parlak<br>
-    <b>Kullanım tipi:</b><br>( data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800" )<br> ( class="metin-birincil metin-300 metin-soluk data-arka-ikincil data-arka-600 data-arka-parlak kenar-tam-siyah kenar-800" )<br><br></p>
+    <b>Kullanım tipi:</b><br>data-metin="birincil 300 soluk" data-arka="ikincil 600 parlak" data-kenar="tam siyah 800"</p>
   </div>
   <div class="" data-gnl="4 4p">
     <div data-gnl="4">
