--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -26,7 +26,7 @@
 <body class="kap ortala">
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div   data-gnl="23 24p">
-<div class="kaplama" data-gnl="24" data-ufk="24">
+<div class="kaplama" data-gnl="24" data-ufk="24 24">
   <div data-gnl="24">
     <h1>Renk Örgüsü</h1>
     <p>Renk örgüsü varsayılan olarak tanımlanmış bazı renk etiketleriyle kullanılmaktadır. "ana", "ara", "birincil", "ikincil" etiketleri kullanıcılar tarafından özelleştirilebilir renk grubudur. Bunların yanında özelleştirilebilen "dikkat", "tehlike", "bilgi", "olumlu", "olumsuz" renk etiketleri de kullanıcılar tarafından özelleştirilebilmektedir. Aşağıda renk örgüsünü kullanmak yönünde açıklamaları okuyunuz.</p>
@@ -34,7 +34,7 @@
   <div data-gnl="24">
     <h2>Tanımlamalar</h2>
   </div>
-  <div data-gnl="24" data-ufk="1" style="font-size:13px;">
+  <div data-gnl="24" data-ufk="8" style="font-size:13px;">
     <p><b>Renklendirme Alanları:</b><br> metin - data-arka - kenar<br>
     Belirtilen 3 alana renklendirmeler yapabilirsiniz.<br><br>
     <b>Kullanım tipi:</b><br>( data-metin=" " data-arka=" " data-kenar=" " )<br> ( class="metin- data-arka- kenar-" )<br><br></p>
